@@ -8,7 +8,12 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestEntityDataBuilder.getApplicantHistoryBillingEntity;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestModelDataBuilder.getApplicantHistoryBillingDTO;
+import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestEntityDataBuilder.getPopulatedBillingFeedLogEntity;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
@@ -19,16 +24,22 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.justice.laa.maat.scheduled.tasks.client.CrownCourtLitigatorFeesApiClient;
 import uk.gov.justice.laa.maat.scheduled.tasks.dto.ApplicantHistoryBillingDTO;
 import uk.gov.justice.laa.maat.scheduled.tasks.entity.ApplicantHistoryBillingEntity;
+import uk.gov.justice.laa.maat.scheduled.tasks.entity.BillingDataFeedLogEntity;
 import uk.gov.justice.laa.maat.scheduled.tasks.enums.BillingDataFeedRecordType;
 import uk.gov.justice.laa.maat.scheduled.tasks.mapper.ApplicantHistoryBillingMapper;
+import uk.gov.justice.laa.maat.scheduled.tasks.mapper.BillingDataFeedLogMapper;
 import uk.gov.justice.laa.maat.scheduled.tasks.repository.ApplicantHistoryBillingRepository;
 import uk.gov.justice.laa.maat.scheduled.tasks.request.UpdateApplicantHistoriesRequest;
 
 @ExtendWith(MockitoExtension.class)
 class ApplicantHistoryBillingServiceTest {
 
-    private static final int TEST_ID = 1;
+    private static final int APPLICANT_HISTORY_TEST_ID = 1;
     private static final String USER_MODIFIED = "TEST";
+
+    private final ObjectMapper objectMapper = JsonMapper.builder()
+        .addModule(new JavaTimeModule())
+        .build();
 
     @Mock
     private ApplicantHistoryBillingRepository applicantHistoryBillingRepository;
@@ -37,46 +48,85 @@ class ApplicantHistoryBillingServiceTest {
     @Mock
     private BillingDataFeedLogService billingDataFeedLogService;
     @Mock
+    private BillingDataFeedLogMapper billingDataFeedLogMapper;
+    @Mock
     private CrownCourtLitigatorFeesApiClient crownCourtLitigatorFeesApiClient;
     @InjectMocks
     private ApplicantHistoryBillingService applicantHistoryBillingService;
 
     @Test
-    void giveCCLFDataAvailable_whenSendApplicantHistoryToBillingIsInvoked_thenDatabaseUpdatedAndBillingCalled() {
-        ApplicantHistoryBillingEntity entity = getApplicantHistoryBillingEntity(TEST_ID);
-        ApplicantHistoryBillingDTO dto = getApplicantHistoryBillingDTO(TEST_ID);
+    void givenNoDataAvailable_whenSendApplicantHistoryToBillingIsInvoked_thenNoActionsPerformed() {
+        ApplicantHistoryBillingDTO dto = getApplicantHistoryBillingDTO(APPLICANT_HISTORY_TEST_ID);
 
-        when(applicantHistoryBillingRepository.extractApplicantHistoryForBilling()).thenReturn(
-                List.of(entity));
-        when(applicantHistoryBillingMapper.mapEntityToDTO(entity)).thenReturn(dto);
-        when(applicantHistoryBillingRepository.resetApplicantHistory(anyString(),
-                anyList())).thenReturn(1);
+        when(applicantHistoryBillingRepository.extractApplicantHistoryForBilling())
+            .thenReturn(Collections.emptyList());
 
         applicantHistoryBillingService.sendApplicantHistoryToBilling(USER_MODIFIED);
 
-        verify(applicantHistoryBillingRepository).resetApplicantHistory(USER_MODIFIED,
-                List.of(TEST_ID));
-        verify(billingDataFeedLogService).saveBillingDataFeed(
-                BillingDataFeedRecordType.APPLICANT_HISTORY, List.of(dto).toString());
-        verify(crownCourtLitigatorFeesApiClient).updateApplicantsHistory(any(
-                UpdateApplicantHistoriesRequest.class));
+        verify(applicantHistoryBillingRepository, never()).resetApplicantHistory(
+            List.of(APPLICANT_HISTORY_TEST_ID), USER_MODIFIED);
+        verify(billingDataFeedLogService, never()).saveBillingDataFeed(
+            BillingDataFeedRecordType.APPLICANT_HISTORY, List.of(dto));
+        verify(crownCourtLitigatorFeesApiClient, never()).updateApplicantsHistory(
+            any(UpdateApplicantHistoriesRequest.class));
     }
 
     @Test
-    void givenNoCCLFDataAvailable_whenSendApplicantHistoryToBillingIsInvoked_thenNoActionsPerformed() {
-        ApplicantHistoryBillingDTO dto = getApplicantHistoryBillingDTO(TEST_ID);
+    void giveDataAvailable_whenSendApplicantHistoryToBillingIsInvoked_thenDatabaseUpdatedAndBillingCalled() {
+        ApplicantHistoryBillingEntity entity = getApplicantHistoryBillingEntity(
+            APPLICANT_HISTORY_TEST_ID);
+        ApplicantHistoryBillingDTO dto = getApplicantHistoryBillingDTO(APPLICANT_HISTORY_TEST_ID);
 
         when(applicantHistoryBillingRepository.extractApplicantHistoryForBilling()).thenReturn(
-                Collections.emptyList());
+            List.of(entity));
+        when(applicantHistoryBillingMapper.mapEntityToDTO(entity)).thenReturn(dto);
+        when(applicantHistoryBillingRepository.resetApplicantHistory(
+            anyList(), anyString())).thenReturn(1);
 
         applicantHistoryBillingService.sendApplicantHistoryToBilling(USER_MODIFIED);
 
-        verify(applicantHistoryBillingRepository, never()).resetApplicantHistory(USER_MODIFIED,
-                List.of(TEST_ID));
-        verify(billingDataFeedLogService, never()).saveBillingDataFeed(
-                BillingDataFeedRecordType.APPLICANT_HISTORY, List.of(dto).toString());
-        verify(crownCourtLitigatorFeesApiClient, never()).updateApplicantsHistory(any(
-                UpdateApplicantHistoriesRequest.class));
+        verify(applicantHistoryBillingRepository).resetApplicantHistory(
+            List.of(APPLICANT_HISTORY_TEST_ID), USER_MODIFIED);
+        verify(billingDataFeedLogService).saveBillingDataFeed(
+            BillingDataFeedRecordType.APPLICANT_HISTORY, List.of(dto));
+        verify(crownCourtLitigatorFeesApiClient).updateApplicantsHistory(
+            any(UpdateApplicantHistoriesRequest.class));
+    }
+
+    @Test
+    void givenNoDataAvailable_whenResendApplicantHistoryToBillingIsInvoked_thenNoActionsPerformed() {
+        when(billingDataFeedLogService.getBillingDataFeedLogs(
+            BillingDataFeedRecordType.APPLICANT_HISTORY))
+            .thenReturn(Collections.emptyList());
+
+        applicantHistoryBillingService.resendApplicantHistoryToBilling();
+
+        verify(applicantHistoryBillingRepository, never()).resetApplicantHistory(any(), any());
+        verify(billingDataFeedLogService, never()).saveBillingDataFeed(any(), any());
+        verify(crownCourtLitigatorFeesApiClient, never()).updateApplicantsHistory(
+            any(UpdateApplicantHistoriesRequest.class));
+    }
+
+    @Test
+    void givenDataAvailable_whenResendApplicantHistoryToBillingIsInvoked_thenDatabaseUpdatedAndBillingCalled()
+        throws JsonProcessingException {
+        ApplicantHistoryBillingDTO applicantHistoryDto = getApplicantHistoryBillingDTO(
+            APPLICANT_HISTORY_TEST_ID);
+        BillingDataFeedLogEntity billingEntity = getPopulatedBillingFeedLogEntity(123,
+            applicantHistoryDto, objectMapper);
+
+        when(billingDataFeedLogService.getBillingDataFeedLogs(
+            BillingDataFeedRecordType.APPLICANT_HISTORY))
+            .thenReturn(List.of(billingEntity));
+        when(billingDataFeedLogMapper.mapEntityToApplicationHistoryBillingDtos(billingEntity))
+            .thenReturn(List.of(applicantHistoryDto));
+
+        applicantHistoryBillingService.resendApplicantHistoryToBilling();
+
+        verify(applicantHistoryBillingRepository, never()).resetApplicantHistory(any(), any());
+        verify(billingDataFeedLogService).saveBillingDataFeed(
+            BillingDataFeedRecordType.APPLICANT_HISTORY, List.of(applicantHistoryDto));
+        verify(crownCourtLitigatorFeesApiClient).updateApplicantsHistory(
+            any(UpdateApplicantHistoriesRequest.class));
     }
 }
-
